--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,4 +1,6 @@
 .navbar-lewagon {
+  position: sticky;
+  top: 0;
   justify-content: space-between;
   background: white;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
