--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -63,5 +63,5 @@
     <% end %>
   </div>
 
-  <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete }, class: "btn btn-gradient" %>
+  <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete }, class: "btn-gradient mt-4" %>
 </div>
