--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,10 @@
 // External libraries
 @import "bootstrap/scss/bootstrap";
 @import "font-awesome";
+@import "flatpickr/dist/flatpickr.css";
+@import "flatpickr/dist/themes/confetti.css";
+
+//Themes in browser environments
 
 // Your CSS partials
 @import "components/index";
