--- a/app/views/medications/new.html.erb
+++ b/app/views/medications/new.html.erb
@@ -1,7 +1,7 @@
 <div class="add_your_med">
 <h2>Medication</h2>
 
-    <%= simple_form_for @medication do |f| %>
+    <%= simple_form_for @medication, data: {controller: "checkbox"} do |f| %>
       <%= f.input :name, :input_html => { :class => "form-round"} %>
       <%= f.input :dosage, label:"Dosage (mg)", :input_html => { :class => "form-round"} %>
       <%= f.input :hours, :input_html => { :class => "form-round"} %>
