--- a/app/assets/stylesheets/users/_login.scss
+++ b/app/assets/stylesheets/users/_login.scss
@@ -1,3 +1,33 @@
 .login-h2{
   text-align: center;
+  font-size: 30px;
+}
+
+.btn-login{
+  position: fixed;
+  bottom: 70px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 8px 24px;
+  border-radius: 4px;
+  background-color: #9de5aa;
+  transition: 0.3s ease;
+  border: 1px solid #7bd3a1;
+  display: flex;
+  justify-content: center;
+
+  input {
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+
+    &:active {
+      color: white;
+      background-color: #67c679
+    }
+
+    &:visited {
+      color: white;
+    }
+  }
 }
