added a delete confirmation

--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -4,3 +4,19 @@
   right: 16px;
   z-index: 1000;
 }
+
+.swal-footer {
+  text-align: center;
+}
+
+.swal-title {
+  font-family: 'Nunito';
+}
+
+.swal-text {
+  font-family: 'Nunito';
+}
+
+.swal-button {
+  font-family: 'Nunito';
+}
