--- a/app/assets/stylesheets/components/_links-devise.scss
+++ b/app/assets/stylesheets/components/_links-devise.scss
@@ -1,15 +1,17 @@
 .links-devise{
-  margin-bottom: 20px;
-  color: #66946e
+  color: #66946e;
+  top: 70px;
+}
 
+.button-sign-up{
+  position: relative;
 }
 
 .link-box{
-  margin-top: 0px;
+  margin-top: 20px;
   text-align: center;
 }
 
 .links-fypass{
   color: black;
-
 }
