--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,25 +1,33 @@
-<h2>Sign up</h2>
+<div class="background-dashboard" style="background-image: url('<%= image_path "backgrounds/park.png" %>')"></div>
+  <div class="main-signup h-100 d-flex flex-column">
+    <h2 class="signup-h2 mt-3"><strong>Sign up</strong></h2>
+    <div class="container d-flex flex-column justify-content-center flex-grow-1">
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: { turbo: :false }) do |f| %>
+        <%= f.error_notification %>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), data: { turbo: :false }) do |f| %>
-  <%= f.error_notification %>
+        <div class="form-inputs">
+          <%= f.input :email,
+                      required: true,
+                      autofocus: true,
+                      input_html: { autocomplete: "email" }%>
+          <%= f.input :password,
+                      required: true,
+                      hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                      input_html: { autocomplete: "new-password" } %>
+          <%= f.input :password_confirmation,
+                      required: true,
+                      input_html: { autocomplete: "new-password" } %>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
+          <div class="d-flex justify-content-center w-50 text-center">
+            <%= f.button :submit, "Sign up", class: "btn-login" %>
+          </div>
+          <div class="d-flex justify-content-center w-50 text-center mt-2">
+            <%= link_to "Log in", new_session_path(resource_name) %>
+          </div>
+        </div>
+      <% end %>
+      <div class="mt-1">
+      </div>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
