--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,8 @@
       <%= render "shared/navbar" %>
     <% end %>
     <%= render "shared/flashes" %>
-
-    <%= yield %>
+    <div class="page-container">
+        <%= yield %>
+    </div>
   </body>
 </html>
