--- a/app/assets/stylesheets/doggies/_new.scss
+++ b/app/assets/stylesheets/doggies/_new.scss
@@ -7,6 +7,7 @@
 .new-doggie-container{
   background-color: white;
   text-align: center;
+  font-family: "Nunito";
   height: 100vh;
   padding: 40px;
 }
@@ -21,6 +22,11 @@
   color: rgb(0, 0, 0);
   transition: 0.1s ease;
   border-radius: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border: 0;
 }
 
 .btn-create-new-dog:active{
