delete confirmation working properly according to list filters

--- a/app/views/medications/index.html.erb
+++ b/app/views/medications/index.html.erb
@@ -6,8 +6,8 @@
     <div class="toggle-list night-button" type="button" data-action="click->medications#activate" data-medications-target="listButton"><i class="fa-solid fa-cloud-moon"></i></div>
   </div>
 
-  <div id="medications-lists" data-controller="swal">
-    <div class="" id="all-meds" data-medications-target="timeOfDay">
+  <div id="medications-lists" >
+    <div class="" id="all-meds" data-medications-target="timeOfDay" data-controller="swal">
 
       <% @all_medications.each do |medication|%>
         <div class="medication-info">
@@ -49,7 +49,7 @@
 
     </div>
 
-    <div class="d-none" id="morning-meds" data-medications-target="timeOfDay">
+    <div class="d-none" id="morning-meds" data-medications-target="timeOfDay" data-controller="morningswal">
 
       <% @morning_medications.each do |medication|%>
       <div class="medication-info">
@@ -80,16 +80,17 @@
             </div>
         <% end %>
         <div class="delete-button">
-            <%= link_to destroy_medication_path(medication), data: {turbo_method: :delete} do %>
-              <i class="fa-solid fa-trash-can"></i>
-            <% end %>
+          <div id="sweet-alert-morning-<%= medication.id %>" class="swal-buttons-morning">
+            <i class="fa-solid fa-trash-can" style="color:white"></i>
+          </div>
+          <%= link_to "", destroy_medication_path(medication), data: {turbo_method: :delete}, id: "delete-link", class: "hidden" %>
         </div>
       </div>
       <% end %>
 
     </div>
 
-    <div class="d-none" id="afternoon-meds" data-medications-target="timeOfDay">
+    <div class="d-none" id="afternoon-meds" data-medications-target="timeOfDay" data-controller="afternoonswal">
 
       <% @afternoon_medications.each do |medication|%>
       <div class="medication-info">
@@ -119,9 +120,10 @@
             </div>
         <% end %>
         <div class="delete-button">
-            <%= link_to destroy_medication_path(medication), data: {turbo_method: :delete} do %>
-              <i class="fa-solid fa-trash-can"></i>
-            <% end %>
+          <div id="sweet-alert-afternoon-<%= medication.id %>" class="swal-buttons-afternoon">
+            <i class="fa-solid fa-trash-can" style="color:white"></i>
+          </div>
+          <%= link_to "", destroy_medication_path(medication), data: {turbo_method: :delete}, id: "delete-link", class: "hidden" %>
         </div>
       </div>
       <% end %>
@@ -129,7 +131,7 @@
 
     </div>
 
-    <div class="d-none" id="night-meds" data-medications-target="timeOfDay">
+    <div class="d-none" id="night-meds" data-medications-target="timeOfDay" data-controller="nightswal">
 
       <% @night_medications.each do |medication|%>
       <div class="medication-info">
@@ -159,9 +161,10 @@
             </div>
         <% end %>
         <div class="delete-button">
-            <%= link_to destroy_medication_path(medication), data: {turbo_method: :delete} do %>
-              <i class="fa-solid fa-trash-can"></i>
-            <% end %>
+          <div id="sweet-alert-night-<%= medication.id %>" class="swal-buttons-night">
+            <i class="fa-solid fa-trash-can" style="color:white"></i>
+          </div>
+          <%= link_to "", destroy_medication_path(medication), data: {turbo_method: :delete}, id: "delete-link", class: "hidden" %>
         </div>
       </div>
       <% end %>
