--- a/app/views/medications/index.html.erb
+++ b/app/views/medications/index.html.erb
@@ -39,10 +39,10 @@
 
 
           <div class="delete-button">
-            <div id="sweet-alert-<%= medication.id %>" class="swal-buttons">
+            <div id="sweet-alert-<%= medication.id %>" class="swal-buttons" data-medication-id="<%=medication.id%>">
               <i class="fa-solid fa-trash-can" style="color:white"></i>
             </div>
-            <%= link_to "", destroy_medication_path(medication), data: {turbo_method: :delete}, id: "delete-link", class: "hidden" %>
+            <%= link_to "", destroy_medication_path(medication), data: {turbo_method: :delete}, id: "delete-link-#{medication.id}", class: "hidden" %>
           </div>
         </div>
       <% end %>
@@ -80,10 +80,10 @@
             </div>
         <% end %>
         <div class="delete-button">
-          <div id="sweet-alert-morning-<%= medication.id %>" class="swal-buttons-morning">
+          <div id="sweet-alert-morning-<%= medication.id %>" class="swal-buttons-morning" data-medication-id="<%=medication.id%>">
             <i class="fa-solid fa-trash-can" style="color:white"></i>
           </div>
-          <%= link_to "", destroy_medication_path(medication), data: {turbo_method: :delete}, id: "delete-link", class: "hidden" %>
+          <%= link_to "", destroy_medication_path(medication), data: {turbo_method: :delete}, id: "delete-link-#{medication.id}", class: "hidden" %>
         </div>
       </div>
       <% end %>
@@ -120,10 +120,10 @@
             </div>
         <% end %>
         <div class="delete-button">
-          <div id="sweet-alert-afternoon-<%= medication.id %>" class="swal-buttons-afternoon">
+          <div id="sweet-alert-afternoon-<%= medication.id %>" class="swal-buttons-afternoon" data-medication-id="<%=medication.id%>">
             <i class="fa-solid fa-trash-can" style="color:white"></i>
           </div>
-          <%= link_to "", destroy_medication_path(medication), data: {turbo_method: :delete}, id: "delete-link", class: "hidden" %>
+          <%= link_to "", destroy_medication_path(medication), data: {turbo_method: :delete}, id: "delete-link-#{medication.id}", class: "hidden" %>
         </div>
       </div>
       <% end %>
@@ -161,10 +161,10 @@
             </div>
         <% end %>
         <div class="delete-button">
-          <div id="sweet-alert-night-<%= medication.id %>" class="swal-buttons-night">
+          <div id="sweet-alert-night-<%= medication.id %>" class="swal-buttons-night" data-medication-id="<%=medication.id%>">
             <i class="fa-solid fa-trash-can" style="color:white"></i>
           </div>
-          <%= link_to "", destroy_medication_path(medication), data: {turbo_method: :delete}, id: "delete-link", class: "hidden" %>
+          <%= link_to "", destroy_medication_path(medication), data: {turbo_method: :delete}, id: "delete-link-#{medication.id}", class: "hidden" %>
         </div>
       </div>
       <% end %>
