--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,18 +1,22 @@
-<h2>Forgot your password?</h2>
+<div class="background-dashboard" style="background-image: url('<%= image_path "backgrounds/park.png" %>')"></div>
+  <div class="main-signup h-100 d-flex flex-column">
+    <h2 class="signup-h2 mt-4"><strong>Forgot your password?</strong></h2>
+      <div class="container d-flex flex-column justify-content-center flex-grow-1 mt-3">
+        <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { "data-turbo": "false", method: :post }) do |f| %>
+        <%= f.error_notification %>
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
+        <div class="form-inputs">
+          <%= f.input :email,
+                      required: true,
+                      autofocus: true,
+                      input_html: { autocomplete: "email" } %>
+        </div>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" } %>
+         <div class="d-flex justify-content-center w-50 text-center">
+          <%= f.button :submit, "Reset Password", class: "btn-login" %>
+        </div>
+      <% end %>
+      </div>
+      <%= render "devise/shared/links" %>
+
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
