--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,7 +22,7 @@
             <%= f.button :submit, "Sign up", class: "btn-login" %>
           </div>
           <div class="d-flex justify-content-center w-50 text-center mt-2">
-            <%= link_to "Log in", new_session_path(resource_name) %>
+            <%= link_to "Log in", new_session_path(resource_name), class: "links-devise" %>
           </div>
         </div>
       <% end %>
