--- a/app/assets/stylesheets/medications/_edit.scss
+++ b/app/assets/stylesheets/medications/_edit.scss
@@ -15,4 +15,17 @@
 .btn-edit-med {
   display: flex;
   justify-content: center;
+
+  a {
+    color: #4A4A4A;
+    border: 1px solid #4A4A4A;
+    padding: 2px 8px;
+    border-radius: 10px;
+    font-weight: lighter;
+    opacity: 0.6;
+    transition: opacity 0.3s ease;
+    &:active {
+      opacity: 1;
+    }
+  }
 }
