check button done

--- a/app/assets/stylesheets/medications/_home.scss
+++ b/app/assets/stylesheets/medications/_home.scss
@@ -27,7 +27,7 @@
 
 .medication-info {
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 1fr 2fr 1fr;
   margin-bottom: 15px;
 
   .delete-button {
@@ -38,6 +38,24 @@
     margin-left: 14px;
     color: rgb(184, 184, 184);
     background-color: rgb(255, 71, 71);
+    font-size: 40px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
+    a {
+      color: white;
+      font-size: 30px;
+    }
+  }
+
+  .treat-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    aspect-ratio: 1 / 1;
+    margin-right: 14px;
+    color: rgb(184, 184, 184);
+    background-color: #9DE5AA,;
     font-size: 40px;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
