--- a/app/views/medications/index.html.erb
+++ b/app/views/medications/index.html.erb
@@ -13,7 +13,9 @@
         <div class="medication-info">
           <%= link_to medication_path(medication), class:"med-div" do %>
               <div class="name-and-dosage">
-                <div><%= medication.name %></div>
+                <div>
+                  <%= medication.name.length > 12 ? "#{medication.name.first(12)}..." : medication.name %>
+                </div>
                 <div><%= "#{medication.dosage}mg" %></div>
               </div>
               <div class="time-and-weekdays">
@@ -55,7 +57,9 @@
       <div class="medication-info">
         <%= link_to medication_path(medication), class:"med-div" do %>
             <div class="name-and-dosage">
-              <div><%= medication.name %></div>
+              <div>
+                <%= medication.name.length > 12 ? "#{medication.name.first(12)}..." : medication.name %>
+              </div>
               <div><%= "#{medication.dosage}mg" %></div>
             </div>
             <div class="time-and-weekdays">
@@ -96,7 +100,9 @@
       <div class="medication-info">
         <%= link_to medication_path(medication), class:"med-div" do %>
             <div class="name-and-dosage">
-              <div><%= medication.name %></div>
+              <div>
+                <%= medication.name.length > 12 ? "#{medication.name.first(12)}..." : medication.name %>
+              </div>
               <div><%= "#{medication.dosage}mg" %></div>
             </div>
             <div class="time-and-weekdays">
@@ -137,7 +143,9 @@
       <div class="medication-info">
         <%= link_to medication_path(medication), class:"med-div" do %>
             <div class="name-and-dosage">
-              <div><%= medication.name %></div>
+              <div>
+                <%= medication.name.length > 12 ? "#{medication.name.first(12)}..." : medication.name %>
+              </div>
               <div><%= "#{medication.dosage}mg" %></div>
             </div>
             <div class="time-and-weekdays">
