--- a/app/assets/stylesheets/medications/_home.scss
+++ b/app/assets/stylesheets/medications/_home.scss
@@ -2,22 +2,24 @@
 
 .list-buttons {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  margin: 0px 15px;
+  grid-template-columns: 60px 60px 60px 60px;
+  grid-gap: 10px;
   justify-content: center;
+  align-content: center;
 
   .toggle-list {
     display: flex;
     justify-content: center;
     aspect-ratio: 1 / 1;
     align-items: center;
-    margin: 15px 7px;
+    margin-bottom: 15px;
+    margin-top: 15px;
     color: rgb(184, 184, 184);
     background-color: white;
-    height: 75px;
+    height: 60px;
     font-size: 40px;
     border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   }
 
   .active-button {
@@ -27,38 +29,39 @@
 
 .medication-info {
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
-  margin-bottom: 15px;
+  grid-template-columns: 60px 230px 60px;
+  grid-gap: 10px;
+  margin-bottom: 18px;
 
   .delete-button {
     display: flex;
     justify-content: center;
     align-items: center;
     aspect-ratio: 1 / 1;
-    margin-left: 14px;
+    height: 60px;
     color: rgb(184, 184, 184);
     background-color: rgb(255, 71, 71);
     font-size: 40px;
     border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     a {
       color: white;
       font-size: 30px;
     }
   }
 
-  .treat-button {
+  .check-button {
     display: flex;
     justify-content: center;
     align-items: center;
     aspect-ratio: 1 / 1;
+    height: 60px;
     margin-right: 14px;
     color: rgb(184, 184, 184);
     background-color: #9DE5AA,;
     font-size: 40px;
     border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
 
     a {
       color: white;
@@ -68,7 +71,10 @@
 }
 
 #medications-lists {
-  margin: 5px 25px;
+  display: flex;
+  justify-content: center;
+  margin-top: 5px;
+  margin-bottom: 5px;
   padding-bottom: 10px;
   font-family: 'Nunito', sans-serif;
   font-weight: 600;
@@ -79,8 +85,8 @@
     align-items: center;
     background-color: white;
     border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    padding: 10px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    padding: 5px;
     color: black;
 
     .name-and-dosage {
@@ -107,7 +113,7 @@
     background-color: #9DE5AA,;
     padding: 30px;
     border-radius: 50px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 
     i {
       color: white;
