added the check button to the other lists

--- a/app/views/medications/index.html.erb
+++ b/app/views/medications/index.html.erb
@@ -60,6 +60,11 @@
 
       <% @morning_medications.each do |medication|%>
       <div class="medication-info">
+        <div class="check-button">
+          <%= link_to medication_taken_medications_path(medication), data: {turbo_method: :post} do %>
+            <i class="fa-solid fa-check" style="color:white"></i>
+          <% end %>
+        </div>
         <%= link_to medication_path(medication), class:"med-div" do %>
             <div class="name-and-dosage">
               <div><%= medication.name %></div>
@@ -101,6 +106,11 @@
 
       <% @afternoon_medications.each do |medication|%>
       <div class="medication-info">
+        <div class="check-button">
+          <%= link_to medication_taken_medications_path(medication), data: {turbo_method: :post} do %>
+            <i class="fa-solid fa-check" style="color:white"></i>
+          <% end %>
+        </div>
         <%= link_to medication_path(medication), class:"med-div" do %>
             <div class="name-and-dosage">
               <div><%= medication.name %></div>
@@ -142,6 +152,11 @@
 
       <% @night_medications.each do |medication|%>
       <div class="medication-info">
+        <div class="check-button">
+          <%= link_to medication_taken_medications_path(medication), data: {turbo_method: :post} do %>
+            <i class="fa-solid fa-check" style="color:white"></i>
+          <% end %>
+        </div>
         <%= link_to medication_path(medication), class:"med-div" do %>
             <div class="name-and-dosage">
               <div><%= medication.name %></div>
