--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -61,3 +61,17 @@ a {
   margin-top: 5px;
   font-size: 20px;
 }
+
+.doggie-treat {
+  display: flex;
+  position: fixed;
+  top: 33%;
+  left: 13%;
+  transform: translateX(-50%);
+  aspect-ratio: 1 / 1;
+  height: 30px;
+  .treat-image {
+    height: 90px;
+  }
+
+}
