--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,7 +1,14 @@
 <div class="dashboard-container">
   <div class="dashboard-docdoggie">
     <div class="background-dashboard" style="background-image: url('<%= image_path "backgrounds/park.png" %>')">
-    <%= image_tag @doggie.image_url, class:"docdoggie-pet"%>
+      <%= image_tag @doggie.image_url, class:"docdoggie-pet"%>
+      <% if current_user.taken_medications.where(feed: false).present? %>
+        <div class="doggie-treat">
+          <%= link_to taken_medications_path, data: {turbo_method: :patch} do %>
+          <%= image_tag "icons/new-treat.png", class:"treat-image" %>
+          <% end %>
+        </div>
+      <% end %>
     </div>
   </div>
   <div class="dashboard-header">
