--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -4,7 +4,7 @@
       <%= image_tag @doggie.image_url, class:"docdoggie-pet"%>
       <% if current_user.taken_medications.where(feed: false).present? %>
         <div class="doggie-treat">
-          <%= link_to taken_medications_path, data: {turbo_method: :patch} do %>
+          <%= link_to taken_medications_path, data: {turbo_method: :post} do %>
           <%= image_tag "icons/new-treat.png", class:"treat-image" %>
           <% end %>
         </div>
