--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -65,8 +65,8 @@ a {
 .doggie-treat {
   display: flex;
   position: fixed;
-  top: 33%;
-  left: 13%;
+  top: 306px;
+  left: 48px;
   transform: translateX(-50%);
   aspect-ratio: 1 / 1;
   height: 30px;
