button colors changed

--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -52,9 +52,9 @@
   padding: 8px 24px;
   border-radius: 4px;
   font-weight: bold;
-  background-color: #9de5aa;
+  background-color: #07a65f;
   transition: background 0.3s ease;
-  border: 1px solid #7bd3a1;
+  border: 1px solid #000000;
   display: flex;
   justify-content: center;
 
