--- a/app/assets/stylesheets/medications/_home.scss
+++ b/app/assets/stylesheets/medications/_home.scss
@@ -21,7 +21,7 @@
   }
 
   .active-button {
-    color:rgb(95, 220, 255);
+    color:#00b8eb;
   }
 }
 
@@ -56,7 +56,7 @@
     height: 60px;
     margin-right: 14px;
     color: rgb(184, 184, 184);
-    background-color: #9DE5AA,;
+    background-color: #07a65f;
     font-size: 40px;
     border-radius: 10px;
     box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
@@ -110,7 +110,7 @@
     bottom: 40px;
     left: 50%;
     transform: translateX(-50%);
-    background-color: #9DE5AA,;
+    background-color: #07a65f;
     padding: 30px;
     -webkit-border-radius: 100px;
     text-align: center;
