--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -5,8 +5,8 @@
 
 .background-dashboard{
   display: flex;
-  justify-content: center;
-  position: center;
+  // justify-content: center;
+  // position: center;
   height: 400px;
   background-size: cover;
 }
@@ -64,13 +64,21 @@ a {
 
 
 .doggie-treat {
+  // display: flex;
+  // position: fixed;
+  // top: 306px;
+  // left: 48px;
+  // transform: translateX(-50%);
+  // aspect-ratio: 1 / 1;
+  // height: 30px;
   display: flex;
-  position: fixed;
-  top: 306px;
-  left: 48px;
+  position: relative;
+  top: 75%;
+  /* left: 15%; */
   transform: translateX(-50%);
   aspect-ratio: 1 / 1;
   height: 30px;
+  right: 95%;
   .treat-image {
     height: 90px;
   }
