--- a/app/assets/stylesheets/medications/_home.scss
+++ b/app/assets/stylesheets/medications/_home.scss
@@ -115,7 +115,7 @@
     -webkit-border-radius: 100px;
     text-align: center;
     -moz-border-radius:12px;
-    border-radius: 50px;
+    border-radius: 50%;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 
     i {
